--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -30,7 +30,7 @@
 
 <div>
     <label>Imagen</label>
-    <input type="file" name="cover">
+    <input type="file" name="cover" class="filepond">
 </div>
 
 <div>
