--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -8,4 +8,7 @@
 <!--Loop entre todos los autores de la página-->
 <% authors.forEach(author =>  { %>
     <div><%= author.name %></div>
+    <a href="/authors/<%= author.id %>">Ver</a>
+    <a href="/authors/<%= author.id %>/edit">Editar</a>
+    <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
 <% }) %>
