--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -6,6 +6,8 @@
     <h2>Libros del autor</h2>
     <!--Loop entre todos los libros de la página-->
     <% booksByAuthor.forEach(book =>  { %>
+        <a href="/books/<%= book.id %>">
         <img height="150" width="100" src="<%= book.coverImagePath %>">
+        </a>
     <% }) %>
 <% } %>
