--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <div>
     <!--Loop entre todos los libros de la página-->
     <% books.forEach(book =>  { %>
+        <a href="/books/<%= book.id %>">
         <img height="150" width="100" src="<%= book.coverImagePath %>">
+        </a>
     <% }) %>
     </div>
