Added General Styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h2>Agregado Recientemente</h2>
+<h2 class="page-header">Agregado Recientemente</h2>
 <div>
     <!--Loop entre todos los libros de la página-->
     <% books.forEach(book =>  { %>
