--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,4 +1,4 @@
-<h2><%= author.name %></h2>
+<h2 class="page-header"><%= author.name %></h2>
 <a href="/authors/<%= author.edit %>/edit">Editar</a>
 <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
 <!--Si hay libros del autor los muestra-->
