--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Editar libro</h2>
+<h2 class="page-header">Editar libro</h2>
 <form action="/books/<%= book.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %>
     <a href="/books">Cancelar</a>
