--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,4 @@
-<h2>Nuevo libro</h2>
+<h2 class="page-header">Nuevo libro</h2>
 <form action="/books" method="POST">
     <%- include('_form_fields') %>
     <a href="/books">Cancelar</a>
