--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">Library</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">Library</a>
         <ul>
             <li><a href="/authors">Autores</a></li>
             <li><a href="/authors/new">Añadir autor</a></li>
