--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,39 +1,41 @@
-<div>
-    <label>Título</label>
-    <input type="text" name="title" value="<%= book.title %>">
+<div class="form-row">
+    <div class="form-item">
+      <label>Título</label>
+      <input type="text" name="title" value="<%= book.title %>">
+    </div>
+    <div class="form-item">
+      <label>Autor</label>
+      <select name="author">
+        <% authors.forEach(author => { %>
+          <% if (author.id === book.author) { %>
+            <option selected label="<%= author.name %>" value="<%= author.id %>">
+          <% } else { %>
+            <option label="<%= author.name %>" value="<%= author.id %>">
+          <% } %>
+        <% }) %>
+      </select>
+    </div>
 </div>
-
-<div>
-    <label>Autor</label>
-    <select name="author">
-    <!--Loop entre todos los autores que tenemos-->
-    <% authors.forEach(author => { %>
-        <% if (author.id === book.author)  { %>
-        <option selected label="<%= author.name %>" value="<%= author.id %>"></option>
-        <% } else { %>
-        <option label="<%= author.name %>" value="<%= author.id %>"></option>
-        <% } %>
-    <% }) %>
-    </select>
+  
+<div class="form-row">
+    <div class="form-item">
+      <label>Fecha de Publicación</label>
+      <input type="date" name="publishDate"
+            value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+    </div>
+    <div class="form-item">
+      <label>Cantidad de páginas</label>
+      <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
+    </div>
 </div>
-
-<div>
-    <label>Fecha Publicación</label>
-    <input type="date" name="publishDate" 
-    value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
-</div>
-
-<div>
-    <label>Cantidad de páginas</label>
-    <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
-</div>
-
-<div>
-    <label>Imagen</label>
-    <input type="file" name="cover" class="filepond">
-</div>
-
-<div>
-    <label>Descripción</label>
-    <textarea name="description"><%= book.description %></textarea>
+  
+<div class="form-row">
+    <div class="form-item form-item-no-grow">
+      <label>Imagen</label>
+      <input type="file" name="cover" class="filepond">
+    </div>
+    <div class="form-item">
+      <label>Descripción</label>
+      <textarea name="description"><%= book.description %></textarea>
+    </div>
 </div>
