--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,6 +1,9 @@
 <h2 class="page-header">Nuevo libro</h2>
 <form action="/books" method="POST">
     <%- include('_form_fields') %>
-    <a href="/books">Cancelar</a>
-    <button type="submit">Crear</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/books">Cancelar</a>
+        <button class="btn btn-primary" type="submit">Crear</button>
+    </div>
+
 </form>
