--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -6,10 +6,5 @@
 <!--Si hay libros del autor los muestra-->
 <% if (booksByAuthor.length > 0 )  { %>
     <h2 class="page-header">Libros del autor</h2>
-    <!--Loop entre todos los libros de la página-->
-    <% booksByAuthor.forEach(book =>  { %>
-        <a href="/books/<%= book.id %>">
-        <img height="150" width="100" src="<%= book.coverImagePath %>">
-        </a>
-    <% }) %>
+    <%- include('../partials/bookGrid', { books: booksByAuthor }) %>
 <% } %>
