--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -26,9 +26,5 @@
 <br>
 <div>
 <!--Loop entre todos los libros de la página-->
-<% books.forEach(book =>  { %>
-    <a href="/books/<%= book.id %>">
-    <img height="150" width="100" src="<%= book.coverImagePath %>">
-    </a>
-<% }) %>
+    <%- include('../partials/bookGrid', { books: books, large: true }) %>
 </div>
